# invoice-text-feature-span-extractor

./: .gitignore  Makefile  README.md  build-foundation.md  build-now.md  pyproject.toml
.cursor/rules/: agent-regulations.mdc  always-follow-rule.mdc  rules.mdc
.github/: copilot-instructions.md
data/ingest/: index.parquet
data/logs/: report_2025-09-11T23-41-00-008449+00-00.json  report_2025-09-12T01-21-09-024708+00-00.json  report_2025-09-12T01-36-53-110361+00-00.json  report_2025-09-13T23-38-36-660574+00-00.json  report_2025-09-15T00-52-07-227137+00-00.json  report_2025-09-15T01-07-35-120388+00-00.json  report_2025-09-15T01-21-34-571035+00-00.json  version_log.jsonl
data/review/: queue.parquet
schema/: contract.invoice.json
scripts/: run_pipeline.py
src/invoices/: candidates.py  cli.py  decoder.py  emit.py  ingest.py  labels.py  normalize.py  paths.py  report.py  tokenize.py  train.py  utils.py
src/text_feature_span_extract.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_candidate_bounds.py  test_contract_integrity.py  test_idempotency.py  test_label_alignment.py  test_review_queue.py  test_token_determinism.py
tests/golden/: test_golden_outputs.py
tools/labelstudio/: labelsettings.xml  readme-labelstudio.md  tasks_gen.py
tools/labelstudio/output/: generation_summary.json  tasks.json
